# water-your-plants

./: .gitignore  Cargo.toml  README.md  deploy.sh  mosquitto.conf
client/: .env  Cargo.toml  deploy.sh
client/src/: convert.rs  lib.rs  main.rs  service.rs
client/src/context/: connection.rs  hardware.rs  mod.rs
migrations/: 2024-01-14-INIT.SQL  2024-01-17-INIT.SQL  2024-01-19-PLANT.SQL
src/: db.rs  gpio.rs  main.rs
src/business/: data.rs  dto.rs  mod.rs
src/business/cdi/: mod.rs  transaction.rs
src/business/http_service/: mod.rs  plant.http  plant.rs  plant_profile.rs  user.rs
src/business/http_service/middleware/: login.rs
src/business/manager/: mod.rs  plant_manager.rs  plant_profile_manager.rs  user_manager.rs
src/business/middleware/: login.rs
src/business/mqtt_service/: mod.rs  plant.rs
src/business/service/: mod.rs  user.http  user.rs
src/morse/: code.rs  mod.rs
src/persistence/: mod.rs
src/persistence/dao/: login.rs  mod.rs  plant.rs  user.rs
src/persistence/entity/: login.rs  mod.rs  plant.rs  plant_profile.rs  user.rs
