[package]
name = "raspberry-morse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.16.0"
tokio = {  version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["full"] }
futures = "0.3.29"
dothyphen = "1.0.0"
