[workspace]
members = ["client"]

[package]
name = "water-your-plants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.111"
tokio = "1.35.1"
tokio-stream = "0.1.14"
monadic-mqtt = { git = "https://github.com/aggalex/monadic-mqtt" }
serde = { version = "1.0.195", features = ["derive"] }
log = "0.4.20"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
postgres-from-row = "0.5.2"
deadpool-postgres = "0.12.1"
deadpool = "0.10.0"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
rocket = { version = "0.5.0", features = ["secrets", "serde_json", "json", "rmp-serde"] }
uuid = { version = "1.6.1", features = ["v4"] }
bcrypt = "0.15.0"