[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
monadic-mqtt = { git = "https://github.com/aggalex/monadic-mqtt", branch = "feature/async_subscriber" }
rumqttc = "0.23.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

rppal = {  version = "0.16.0", features = ["hal", "hal-unproven"], optional = true }
dht11 = { version = "0.3.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
tokio = { version = "1.35.1", optional = true }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }


[features]
bin=["rppal", "dht11", "lazy_static", "dotenv", "tokio"]